--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -43,14 +43,13 @@
                     <div class="col-xl-6">
                         <div class="text-center text-white">
                             <!-- Page heading-->
-                            <h1 class="mb-5">Proyecto final Sebastian Bertolotti <br> Django-CoderHouse</h1>
+                            <h1 class="mb-5">Proyecto final <br>Bertolotti - Godoy<br> Django-CoderHouse</h1>
                             {% if messages %}
                                 {% for message in messages %}
                                 <h4><p style="color: rgb(131, 31, 0)" {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</p></h4>
                                 {% endfor %}
                             {% endif %}
                             <div class="text-lg-start text-white">
-
                                 {% block FinalProject_content %}
 
                                 {% endblock %}
@@ -69,6 +68,21 @@
                     <h5><p style="color: rgb(0, 20, 131)" >Not SuperUser</p></h5>
                 {%endif%}
             </div>
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
+                        <ul class="list-inline mb-2">
+                            <li class="list-inline-item"><a href="{% url 'home:about-seba' %}">Acerca de Seba</a></li>
+                            <li class="list-inline-item">⋅</li>
+                            <li class="list-inline-item"><a href="{% url 'home:about-stephy' %}">Acerca de Stephy</a></li>
+                            <li class="list-inline-item">⋅</li>
+                        </ul>
+                        <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2022. All Rights Reserved.</p>
+                    </div>
+                 </div>
+            </div>
+
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
